Rebrand from NeighborNotes to Bibliarch
Changed all references throughout the application:
- Updated app title and metadata
- Changed all UI text in dashboard, auth pages, and components
- Updated email templates
- Updated all documentation files
- Replaced NeighborNotes with Bibliarch globally

The application is now fully rebranded to Bibliarch.

--- a/storycanvas/email-templates/reset-password.html
+++ b/storycanvas/email-templates/reset-password.html
@@ -1,5 +1,5 @@
 <div style="text-align: center; font-family: Arial, sans-serif; color: #000000;">
-  <h2 style="color: #000000;">Reset your NeighborNotes password</h2>
+  <h2 style="color: #000000;">Reset your Bibliarch password</h2>
 
   <p>Follow this link to reset your password:</p>
   <p>
