--- a/storycanvas/email-templates/magic-link.html
+++ b/storycanvas/email-templates/magic-link.html
@@ -1,5 +1,5 @@
 <div style="text-align: center; font-family: Arial, sans-serif; color: #000000;">
-  <h2 style="color: #000000;">Your NeighborNotes magic link</h2>
+  <h2 style="color: #000000;">Your Bibliarch magic link</h2>
 
   <p>Follow this link to log in:</p>
   <p>
